@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.32
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -25,11 +25,11 @@
 ..
 .\" Set up some character translations and predefined strings.  \*(-- will
 .\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
-.\" double quote, and \*(R" will give a right double quote.  \*(C+ will
-.\" give a nicer C++.  Capital omega is used to do unbreakable dashes and
-.\" therefore won't be available.  \*(C` and \*(C' expand to `' in nroff,
-.\" nothing in troff, for use with C<>.
-.tr \(*W-
+.\" double quote, and \*(R" will give a right double quote.  | will give a
+.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used to
+.\" do unbreakable dashes and therefore won't be available.  \*(C` and \*(C'
+.\" expand to `' in nroff, nothing in troff, for use with C<>.
+.tr \(*W-|\(bv\*(Tr
 .ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
 .ie n \{\
 .    ds -- \(*W-
@@ -161,7 +161,7 @@ The \fIntkd\fR\|(8) daemon reads it when it is started and when it receives the
 just do: 
 .PP
 .Vb 1
-\&        killall \-SIGHUP ntkd
+\&        killall -SIGHUP ntkd
 .Ve
 .PP
 All the hostnames, which are already registered by other nodes, are
@@ -197,7 +197,7 @@ It is possible to know the list of hostnames registered by a node. You have to
 simply reverse resolve its ip. For example:
 .PP
 .Vb 1
-\&        dig \-x 127.0.0.2
+\&        dig -x 127.0.0.2
 .Ve
 .PP
 This command shows your currently registered hostnames. You can use it to know
@@ -230,8 +230,8 @@ Not implemented
 The utility \fIntk\-resolv\fR\|(8) can be used to resolve \s-1SNSD\s0 hostnames. Examples:
 .PP
 .Vb 2
-\&        ntk\-resolv \-s 53/udp host
-\&        ntk\-resolv \-s http host
+\&        ntk-resolv -s 53/udp host
+\&        ntk-resolv -s http host
 .Ve
 .SH "SIGNALS"
 .IX Header "SIGNALS"
