@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.32
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -25,11 +25,11 @@
 ..
 .\" Set up some character translations and predefined strings.  \*(-- will
 .\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
-.\" double quote, and \*(R" will give a right double quote.  \*(C+ will
-.\" give a nicer C++.  Capital omega is used to do unbreakable dashes and
-.\" therefore won't be available.  \*(C` and \*(C' expand to `' in nroff,
-.\" nothing in troff, for use with C<>.
-.tr \(*W-
+.\" double quote, and \*(R" will give a right double quote.  | will give a
+.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used to
+.\" do unbreakable dashes and therefore won't be available.  \*(C` and \*(C'
+.\" expand to `' in nroff, nothing in troff, for use with C<>.
+.tr \(*W-|\(bv\*(Tr
 .ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
 .ie n \{\
 .    ds -- \(*W-
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ntk-resolv 8"
-.TH ntk-resolv 8 "2006-06-13" "perl v5.8.8" ""
+.TH ntk-resolv 8 "2006-06-13" "perl v5.8.6" ""
 .SH "NAME"
 ntk\-resolv \- Andns Lookup Resolver
 .SH "SYNOPSIS"
@@ -147,7 +147,7 @@ It uses the 'andns protocol' to encode his contents, as explained in Netsukuku
 The simplest example is:
 .PP
 .Vb 1
-\&        ntk\-resolv hname
+\&        ntk-resolv hname
 .Ve
 .PP
 With this comand, it asks \s-1ANDNA\s0 to tell which \s-1IP\s0 registerd the hostname 'hname'.
@@ -177,8 +177,8 @@ The default service and protocol are 0 and tcp.
 Example:
 .Sp
 .Vb 2
-\&        ntk\-resolv \-s domain/udp host
-\&        ntk\-resolv \-s 53/udp host
+\&        ntk-resolv -s domain/udp host
+\&        ntk-resolv -s 53/udp host
 .Ve
 .Sp
 See the section \fB\s-1QUERY\s0 \s-1TYPE\s0, \s-1SERVICES\s0 \s-1AND\s0 \s-1PROTOCOL\s0\fR for a better explanation.
@@ -245,10 +245,10 @@ For example, the next commands will retrieve the \s-1IP\s0(s) that offers web-pa
 for the hostname \*(L"host\*(R":
 .PP
 .Vb 4
-\&        ntk\-resolv \-s http/tcp host
-\&        ntk\-resolv \-s 80/tcp   host
-\&        ntk\-resolv \-s 80       host
-\&        ntk\-resolv \-s http     host
+\&        ntk-resolv -s http/tcp host
+\&        ntk-resolv -s 80/tcp   host
+\&        ntk-resolv -s 80       host
+\&        ntk-resolv -s http     host
 .Ve
 .PP
 To configure the \s-1SNSD\s0 delegations, see the \s-1SNSD\s0 HowTo.
