@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.32
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -25,11 +25,11 @@
 ..
 .\" Set up some character translations and predefined strings.  \*(-- will
 .\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
-.\" double quote, and \*(R" will give a right double quote.  \*(C+ will
-.\" give a nicer C++.  Capital omega is used to do unbreakable dashes and
-.\" therefore won't be available.  \*(C` and \*(C' expand to `' in nroff,
-.\" nothing in troff, for use with C<>.
-.tr \(*W-
+.\" double quote, and \*(R" will give a right double quote.  | will give a
+.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used to
+.\" do unbreakable dashes and therefore won't be available.  \*(C` and \*(C'
+.\" expand to `' in nroff, nothing in troff, for use with C<>.
+.tr \(*W-|\(bv\*(Tr
 .ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
 .ie n \{\
 .    ds -- \(*W-
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ntk-wifi 8"
-.TH ntk-wifi 8 "2006-06-10" "NetsukukuD 0.0.8b (debug)" ""
+.TH ntk-wifi 8 "2006-06-13" "NetsukukuD 0.0.8b (debug)" ""
 .SH "NAME"
 ntk\-wifi \- configures the specified wifi card to join Netsukuku
 .SH "SYNOPSIS"
@@ -137,7 +137,7 @@ ntk\-wifi \- configures the specified wifi card to join Netsukuku
 ntk-wifi \fIwifi_interface\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-\&\fBNetsukuku_wifi\fR is a bash script, which takes as its first argument the name
+\&\fBNetsukuku_wifi\fR is a shell script, which takes as its first argument the name
 of the wifi network interface to be used in order to join in Netsukuku. Then
 it sets the wifi interface in Ad-Hoc mode and its essid to \*(L"netsukuku\*(R".
 At this point the \fBntkd\fR daemon is ready to be launched,
