@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.32
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -25,11 +25,11 @@
 ..
 .\" Set up some character translations and predefined strings.  \*(-- will
 .\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
-.\" double quote, and \*(R" will give a right double quote.  \*(C+ will
-.\" give a nicer C++.  Capital omega is used to do unbreakable dashes and
-.\" therefore won't be available.  \*(C` and \*(C' expand to `' in nroff,
-.\" nothing in troff, for use with C<>.
-.tr \(*W-
+.\" double quote, and \*(R" will give a right double quote.  | will give a
+.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used to
+.\" do unbreakable dashes and therefore won't be available.  \*(C` and \*(C'
+.\" expand to `' in nroff, nothing in troff, for use with C<>.
+.tr \(*W-|\(bv\*(Tr
 .ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
 .ie n \{\
 .    ds -- \(*W-
@@ -174,7 +174,7 @@ wlan0. You can use more than one interface by specifying multiple times the
 \&\fB\-i\fR option. For example: 
 .Sp
 .Vb 1
-\&        ntkd \-i wlan0 \-i eth0 \-i wifi1 \-i eth1
+\&        ntkd -i wlan0 -i eth0 -i wifi1 -i eth1
 .Ve
 .IP "\fB\-a\fR, \fB\-\-no_andna\fR" 4
 .IX Item "-a, --no_andna"
@@ -227,14 +227,14 @@ Displays the version of the \fBntkd\fR daemon.
 Usually you'll just want to use \fBntkd\fR with a wifi device:
 .PP
 .Vb 2
-\&        ntk\-wifi wlan0
-\&        ntkd \-i wlan0
+\&        ntk-wifi wlan0
+\&        ntkd -i wlan0
 .Ve
 .PP
 If you one to use more than one network interface:
 .PP
 .Vb 1
-\&        ntkd \-i eth0 \-i wlan0 \-i wifi1 \-i eth2
+\&        ntkd -i eth0 -i wlan0 -i wifi1 -i eth2
 .Ve
 .SH "SIGNALS"
 .IX Header "SIGNALS"
