@@ -1,36 +1,32 @@
-#!/bin/bash
+#!/bin/sh
 # ntk-wifi: sets a wifi card in Ad-Hoc mode and its essid to "netsukuku".
 
-if [ -z "$1" ] || [ "$1" == "help" ]  || [ "$1" == "-h" ] ||\
-	[ "$1" == "--help" ]
+if test -z "$1" -o "$1" = "help" -o "$1" = "-h" -o "$1" = "--help"
 then
 	echo "You must specify your wifi interface."
 	echo "Ex: ntk-wifi wlan0"
 	exit 1
 fi
 
-if ( test $(id -u) != 0) then
+if test $(id -u) != 0
+then
 	echo "Root privileges needed."
-	echo "Get them in someway and then come back again"
+	echo "Get them."
 	exit 1
 fi
 
 wlan=$1
 
-echo "Setting $wlan in \"Ad-Hoc\" mode with essid \"netsukuku\""
-echo ""
-echo "iwconfig $wlan mode Ad-Hoc essid netsukuku"
-iwconfig $wlan mode Ad-Hoc essid netsukuku
+echo "* Setting $wlan in \"Ad-Hoc\" mode with essid \"netsukuku\":"
+echo "    iwconfig $wlan mode Ad-Hoc essid netsukuku"
 
-if [ "$?" != 0 ] 
+if ! iwconfig $wlan mode Ad-Hoc essid netsukuku
 then
-	echo ""
-	echo "iwconfig failed."
+	echo "[!] iwconfig failed."
 	echo "Retry manually with: "
-	echo "iwconfig $wlan mode Ad-Hoc essid netsukuku"
+	echo "    iwconfig $wlan mode Ad-Hoc essid netsukuku"
 	exit 1
 fi
 
-echo ""
-echo "$wlan configured. Now you can launch NetsukukuD with: "
-echo "ntkd -i $wlan"
+echo "* $wlan configured. Now you can launch NetsukukuD with: "
+echo "    ntkd -i $wlan"
